fix: handles media timeout